[gd_scene load_steps=3 format=3 uid="uid://di5auhdx6t7vg"]

[ext_resource type="Script" path="res://Game Start/Main Menu/Main Menu.gd" id="1_a0kbw"]
[ext_resource type="PackedScene" uid="uid://bys0ptudnouiw" path="res://Game Start/Character Idle.tscn" id="2_3wm2l"]


[node name="Start Game" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_a0kbw")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
layout_mode = 0
offset_left = -80.0
offset_top = -88.0
offset_right = 1280.0
offset_bottom = 776.0
color = Color(0.32549, 0.533333, 1, 1)

[node name="Title Name" type="RichTextLabel" parent="."]
z_index = -1
layout_mode = 0
offset_left = 440.0
offset_top = 272.0
offset_right = 680.0
offset_bottom = 368.0
scale = Vector2(3, 3)
text = "2D FighterZ"
fit_content = true

[node name="Local Play" type="Button" parent="."]
z_index = -1
layout_mode = 2
offset_left = 224.0
offset_top = 200.0
offset_right = 309.0
offset_bottom = 231.0
text = "Local Play
"
flat = true

[node name="About Characters" type="Button" parent="."]
z_index = -1
layout_mode = 2
offset_left = 224.0
offset_top = 232.0
offset_right = 360.0
offset_bottom = 263.0
text = "About Character
"
flat = true

[node name="Training Room" type="Button" parent="."]
z_index = -1
layout_mode = 2
offset_left = 224.0
offset_top = 264.0
offset_right = 345.0
offset_bottom = 295.0
text = "Training Room"
flat = true

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 1040.0
offset_top = 632.0
offset_right = 1159.0
offset_bottom = 663.0
text = "Button Layout"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(552, 336)
zoom = Vector2(1.7, 1.7)

[node name="Character Pose" parent="." instance=ExtResource("2_3wm2l")]

[connection signal="pressed" from="Local Play" to="." method="_on_local_play_pressed"]
[connection signal="pressed" from="About Characters" to="." method="_on_about_characters_pressed"]
[connection signal="pressed" from="Training Room" to="." method="_on_training_room_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
